  11-Jul-2021  - V0.47 Add support for "alignedRegions" in sequence alignment result files
  12-Jul-2021  - V0.48 Export aligned regions as lists of dictionaries in JSON
  12-Jul-2021  - V0.49 Adjust diagnostics for long running activity workflow
  12-Jul-2021  - V0.50 Add public reload method for ChEMBLTargetActivityProvider()
  12-Jul-2021  - V0.51 Make return status True in ChEMBLTargetActivityProvider.fetchTargetActivityData if the filtered target list is empty
  13-Jul-2021  - V0.52 Make all getFeatures() return an empty list rather than None, plus other small json export adjustments
  13-Jul-2021  - V0.53 Various unifying API method adjustments in cofactor and features providers
  14-Jul-2021  - V0.54 Adjustments for more descriptive IMGT attribute names
  14-Jul-2021  - V0.55 Standardize provider APIs extend functionality of PharosTargetActivityProvider
  28-Jul-2021  - V0.56 Update constructor API for TaxonomyProvider and update dependencies
   5-Sep-2021  - V0.57 Update SAbDab data importer, fix initialization in ChEMBLTargetActivityProvider.getStatusDetails()
  14-Sep-2021  - V0.58 Add cache test for TaxonomyProvider() add bypass for ChEMBL fetchStatus() test
   8-Oct-2021  - V0.59 Fix changing column heading issue for SAbDabTargetProvider()
   6-Jan-2023  - V0.60 Configuration changes to support tox 4
   9-Feb-2023  - V0.61 Find Highest_Clin_Trial column regardless of month in SAbDabTargetProvider(), Update baseVersion for ChEMBL
  27-Feb-2023  - V0.62 Fix PharosTargetProvider mysql loading issue
   3-Mar-2023  - V0.63 Fix typo and handle missing activityType in PharosTargetCofactorProvider()
  13-Mar-2023  - V0.64 Add CARDTargetAnnotationProvider (to replace CARDTargetFeatureProvider)
  22-Mar-2023  - V0.65 Add timeout to IMGT data file fetch, and update py-rcsb_exdb_assets locators
  24-Mar-2023  - V0.66 In PharosTargetProvider(), download sql file to separate dir